--- a/public/css/login.css
+++ b/public/css/login.css
@@ -45,9 +45,32 @@
    }
    
    .button:hover {
-    color: rgb(10, 25, 30);
+    color: white;
    }
    
    .button:active {
     filter: brightness(.8);
    }
+
+.login-main{
+    background-color: white;
+    border-radius: 5px;
+    padding: 20px;
+    width: 300px;
+    margin: calc((100vh - 500px)/2) auto 0 auto;
+    border: solid black 2px;
+}
+
+    .login-main p{
+        padding: 10px 0;
+    }
+
+    .login-main input{
+        width: 100%;
+        height: 30px;
+        margin-bottom: 20px;
+    }
+
+    .center {
+        text-align: center;
+    }
