--- a/public/sass/global.scss
+++ b/public/sass/global.scss
@@ -15,6 +15,7 @@
     $lightblue_color:#3e8692;
     $brown_color:    #8e4b05;
     $green_color:    #102117;
+    $body-color:     #e5e5e5;
     
     
     //Messages
@@ -36,6 +37,10 @@
     margin: 0;
 }
 
+body {
+    background-color: $body-color;
+}
+
 // Background-color message
 $message-color: (
     "Error": $error_color,
@@ -52,6 +57,14 @@ $message-color: (
     }
 }
 
+@each $k, $v in $message-color {
+    .bg-#{$k}{
+        background-color: $v;
+        color: $white_color;
+        padding: 15px;
+    }
+}
+
 .btn {
     padding: 5px 32px;
     text-align: center;
@@ -59,4 +72,12 @@ $message-color: (
     display: inline-block;
     font-size: 16px;
     cursor: pointer;
+}
+
+.center {
+    margin: 0 auto;
+}
+
+.text-center {
+    text-align: center;
 }
