Add pagination and amortization tables

--- a/public/sass/admin.scss
+++ b/public/sass/admin.scss
@@ -33,3 +33,7 @@ $bg-secondary-modal:rgb(0,0,0);
     .modal-header {padding: 2px 16px;} 
     .modal-body {padding: 5px 15px;}
 }
+
+td {
+    padding: 5px;
+}
