--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,4 +1,6 @@
 @import url(https://site-assets.fontawesome.com/releases/v6.1.1/css/all.css);
+@import url(../css/nav.css);
+
 * {
   padding: 0;
   margin: 0; }
@@ -59,5 +61,9 @@ body {
 
 .text-center {
   text-align: center; }
+
+.area {
+  background-color: #e5e5e5;
+  padding-left: 4%; }
 
 /*# sourceMappingURL=global.css.map */
