--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,5 +1,7 @@
 @import url(../css/global.css);
 .btn-login {
+  display: block;
+  margin: auto;
   --color: #c18700;
   padding: 0.8em 1.7em;
   background-color: transparent;
@@ -43,13 +45,31 @@
 .login-main {
   background-color: #fff;
   border-radius: 5px;
-  padding: 20px;
-  width: 300px;
+  padding: 25px;
+  max-width: 310px;
   margin: calc((100vh - 500px)/2) auto 0 auto;
-  border: solid #000 2px; }
+  border: solid  1px;
+  border-color: #000; }
   .login-main input {
+    display: inline-block;
     width: 100%;
-    height: 30px;
-    margin-bottom: 20px; }
+    margin-bottom: 15px;
+    padding: 5px 10px;
+    border: 1px solid;
+    border-color: #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    background-color: #fff; }
+  .login-main label {
+    display: inline-block;
+    margin-bottom: 10px; }
+
+h2 {
+  text-align: center;
+  margin-bottom: 10px; }
+
+span {
+  display: block;
+  margin-top: 15px; }
 
 /*# sourceMappingURL=login.css.map */
