--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -22,8 +22,20 @@
   .modal .modal-body {
     padding: 5px 15px; }
 
-td {
-  padding: 5px; }
+table {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  border-width: 1px;
+  border-spacing: 0px;
+  border-style: solid;
+  border-collapse: separate;
+  background-color: #fff; }
+  table tr, table td {
+    border-width: 1px;
+    padding: 5px;
+    border-style: solid;
+    border-color: black;
+    background-color: fff; }
 
 #paginas ul {
   margin: 10px 0;
@@ -41,6 +53,6 @@ td {
 
 .actual {
   background: #14457c !important;
-  color: white !important; }
+  color: #fff !important; }
 
 /*# sourceMappingURL=admin.css.map */
