--- a/public/css/prestamos.css
+++ b/public/css/prestamos.css
@@ -28,6 +28,6 @@ table {
     padding: 5px;
     border-style: solid;
     border-color: black;
-    background-color: fff; }
+    background-color: #fff; }
 
 /*# sourceMappingURL=prestamos.css.map */
