--- a/public/sass/prestamos.scss
+++ b/public/sass/prestamos.scss
@@ -32,7 +32,7 @@ table {
         padding: 5px;
         border-style: solid;
         border-color: black;
-        background-color: fff;
+        background-color: #fff;
 
     }
 }
