--- a/public/css/prestamos.css
+++ b/public/css/prestamos.css
@@ -1,7 +1,9 @@
-@import url(https://site-assets.fontawesome.com/releases/v6.1.1/css/all.css);
 @import url(../css/global.css);
 .danger {
   border-color: red !important; }
+
+h1 {
+  margin-bottom: 10px; }
 
 select, input {
   display: inline-block;
@@ -14,6 +16,10 @@ select, input {
   border-radius: 4px;
   box-sizing: border-box;
   background-color: #fff; }
+
+.btn-prestamos {
+  display: inline-block;
+  margin-top: 10px; }
 
 table {
   margin-top: 15px;
