--- a/public/css/sign_up.css
+++ b/public/css/sign_up.css
@@ -1,8 +1,9 @@
 @import url(../css/global.css);
 #msform {
   width: 400px;
-  margin: 10px auto;
-  position: relative; }
+  position: fixed;
+  left: 50%;
+  transform: translate(calc(-50% + 80px), 20%); }
   #msform fieldset {
     background-color: #fff;
     border: 0 none;
@@ -110,5 +111,9 @@
   display: inline-block;
   font-size: 16px;
   cursor: pointer; }
+
+@media screen and (max-width: 768px) {
+  #msform {
+    transform: translate(-50%, 10%); } }
 
 /*# sourceMappingURL=sign_up.css.map */
