--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -6,68 +6,104 @@
   display: table-cell;
   width: 60px;
   height: 36px;
-  text-align: center;
+  text-align: left;
   vertical-align: middle;
   font-size: 20px; }
 
-.main-menu {
-  background: #212121;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  height: 100%;
-  left: 0;
-  width: 60px;
-  overflow: hidden;
-  -webkit-transition: width .05s linear;
-  transition: width .05s linear;
-  z-index: 1; }
-  .main-menu:hover, .main-menu.expanded {
-    width: 250px;
-    overflow: visible; }
-  .main-menu > ul {
-    margin: 7px 0; }
-  .main-menu li {
-    position: relative;
-    display: block;
-    width: 250px; }
-    .main-menu li > a {
-      position: relative;
-      display: table;
-      border-collapse: collapse;
-      border-spacing: 0;
-      color: #999;
-      font-family: arial;
-      font-size: 14px;
-      text-decoration: none;
-      -webkit-transition: all .1s linear;
-      transition: all .1s linear; }
-      .main-menu li > a:hover {
-        color: #fff;
-        background-color: #5fa2db; }
-  .main-menu .nav-text {
-    position: relative;
-    display: table-cell;
-    vertical-align: middle;
-    width: 190px;
-    font-family: 'Titillium Web', sans-serif; }
-  .main-menu > ul.logout {
-    position: absolute;
+.main {
+  display: flex; }
+
+.content {
+  padding: 20px; }
+
+.menu {
+  width: 80px;
+  background-color: #212121;
+  padding: 0px 80px 40px 10px;
+  z-index: 999; }
+  .menu .menu-content {
+    position: sticky;
+    top: 0; }
+  .menu .img {
+    padding-left: 12px; }
+    .menu .img a:hover {
+      background-color: #212121; }
+  .menu img {
+    width: 90px;
+    height: 90px; }
+  .menu ul {
+    list-style: none;
+    margin: 5px 0;
+    padding: 10px; }
+    .menu ul li {
+      width: 130px;
+      height: auto;
+      margin-bottom: 10px;
+      white-space: nowrap;
+      cursor: pointer; }
+      .menu ul li a {
+        position: relative;
+        display: table;
+        border-radius: 10px;
+        border-collapse: collapse;
+        border-spacing: 0;
+        color: #999;
+        font-family: arial;
+        font-size: 14px;
+        text-decoration: none;
+        -webkit-transition: all .1s linear;
+        transition: all .1s linear; }
+        .menu ul li a:hover {
+          color: #fff;
+          background-color: #5fa2db; }
+      .menu ul li span {
+        width: 100%;
+        padding-left: 10px;
+        position: relative;
+        display: table-cell;
+        vertical-align: middle;
+        font-family: 'Titillium Web', sans-serif; }
+  .menu ul.logout {
+    position: fixed;
     left: 0;
-    bottom: 0; }
+    bottom: 0;
+    margin-left: 10px; }
+  .menu button {
+    display: none; }
 
-a:hover, a:focus {
-  text-decoration: none; }
+@media screen and (max-width: 768px) {
+  .menu {
+    width: 180px;
+    height: 100%;
+    padding: 20px 70px;
+    position: fixed;
+    padding: 0;
+    top: 0;
+    left: 0;
+    transform: translateX(-100%);
+    transition: 0.5s; }
 
-nav {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  -o-user-select: none;
-  user-select: none; }
-  nav ul, nav li {
-    outline: 0;
-    margin: 0;
-    padding: 0; }
+  .menu-activo {
+    transform: translateX(0%); }
+
+  .menu button {
+    display: block;
+    position: absolute;
+    text-align: right;
+    background-color: #212121;
+    border-color: #212121;
+    color: #999;
+    cursor: pointer;
+    transform: translateX(160px); }
+    .menu button:hover {
+      color: #fff;
+      background-color: #5fa2db;
+      border-color: #5fa2db; }
+
+  .menu-content {
+    position: static; }
+
+  .content {
+    padding: 20px 40px; } }
 
 /*# sourceMappingURL=nav.css.map */
