--- a/public/css/ver.css
+++ b/public/css/ver.css
@@ -1,29 +1,48 @@
 @import url(https://site-assets.fontawesome.com/releases/v6.1.1/css/all.css);
 @import url(../css/global.css);
 .content {
+  width: 100%;
+  height: 100%;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-area: repeat(4, 1fr);
-  grid-template-areas: "img info info info info" "img info info info info" "prestamos prestamos prestamos prestamos prestamos" "prestamos prestamos prestamos prestamos prestamos"; }
+  grid-template-areas: "img info info info info" "prestamos prestamos prestamos prestamos prestamos" "prestamos prestamos prestamos prestamos prestamos" "prestamos prestamos prestamos prestamos prestamos"; }
   .content .img {
     grid-area: img;
-    border: solid 1px;
+    border-style: solid;
+    border-width: 1px;
     border-color: #000; }
     .content .img img {
-      width: 100%;
-      height: auto; }
+      width: 200px;
+      height: 200px;
+      border-radius: 50%; }
   .content .info {
     grid-area: info;
-    padding: 10px;
-    border: solid 1px;
-    border-color: #000; }
+    border-style: solid;
+    border-width: 1px;
+    border-color: #000;
+    padding: 10px; }
     .content .info p {
       display: block; }
       .content .info p span {
         font-weight: bold; }
   .content .prestamos {
     grid-area: prestamos;
-    border: solid 1px;
+    border-style: solid;
+    border-width: 1px;
     border-color: #000; }
+
+.btn-back {
+  background-color: #0d4755;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #000;
+  color: #fff;
+  padding: 10px;
+  max-width: 100px;
+  max-height: auto;
+  cursor: pointer; }
+  .btn-back:hover {
+    background-color: #3e8692; }
 
 /*# sourceMappingURL=ver.css.map */
