--- a/public/sass/global.scss
+++ b/public/sass/global.scss
@@ -1,12 +1,3 @@
-// Import css-icons (https://fontawesome.com/icons)
-
-@import url(https://site-assets.fontawesome.com/releases/v6.1.1/css/all.css);
-@import url(../css/nav.css);
-
-// Import fonts
-
-
-
 //Global background-colors
     
     //Color palette
@@ -42,6 +33,15 @@ body {
     background-color: $body-color;
 }
 
+// Import css-icons (https://fontawesome.com/icons)
+
+@import url(https://site-assets.fontawesome.com/releases/v6.1.1/css/all.css);
+@import url(../css/nav.css);
+
+// Import fonts
+
+
+
 // Background-color message
 $message-color: (
     "Error": $error_color,
@@ -60,10 +60,12 @@ $message-color: (
 
 @each $k, $v in $message-color {
     .bg-#{$k}{
+        width: 100%;
+        position: fixed;
+        z-index: 10;
         background-color: $v;
         color: $white_color;
         padding: 12px;
-        z-index: 0;
         text-align: center;
     }
 }
@@ -83,9 +85,4 @@ $message-color: (
 
 .text-center {
     text-align: center;
-}
-
-.area {
-    background-color: #e5e5e5;
-    padding-left: 6%;
 }
