--- a/public/sass/nav.scss
+++ b/public/sass/nav.scss
@@ -1,92 +1,143 @@
-.fa-2x {font-size: 2em;}
-
+.fa-2x {
+    font-size: 2em; }
+  
 .fa {
     position: relative;
     display: table-cell;
     width: 60px;
     height: 36px;
-    text-align: center;
+    text-align: left;
     vertical-align: middle;
-    font-size:20px;
+    font-size: 20px; }
+  
+.main {
+    display: flex;
 }
 
-.main-menu {
-    background:#212121;
-    position:absolute;
-    top:0;
-    bottom:0;
-    height:100%;
-    left:0;
-    width:60px;
-    overflow:hidden;
-    -webkit-transition:width .05s linear;
-    transition:width .05s linear;
-    //-webkit-transform:translateZ(0) scale(1,1);
-    z-index:1;
+.content {
+    padding: 20px;
+} 
 
-    &:hover, &.expanded {
-        width:250px;
-        overflow:visible;
+.menu {
+    width:80px;
+    background-color:#212121;
+    padding:0px 80px 40px 10px;
+    z-index: 999;
+    
+    .menu-content {
+        position: sticky;
+        top: 0;
     }
-
-    > ul {margin:7px 0;}
-
-    li {
-        position:relative;
-        display:block;
-        width:250px;
-
-        > a {
-            position:relative;
-            display:table;
-            border-collapse:collapse;
-            border-spacing:0;
-            color:#999;
-            font-family: arial;
-            font-size: 14px;
-            text-decoration:none;
-            //-webkit-transform:translateZ(0) scale(1,1);
-            -webkit-transition:all .1s linear;
-            transition:all .1s linear;
-            
+  
+    .img {
+        padding-left: 12px;
+        a {
             &:hover {
-                color:#fff;
-                background-color:#5fa2db;
+                background-color: #212121;
             }
         }
     }
-
-    .nav-text {
-        position:relative;
-        display:table-cell;
-        vertical-align:middle;
-        width:190px;
-        font-family: 'Titillium Web', sans-serif;
+  
+    img {
+        width: 90px;
+        height: 90px;
     }
-
-    > ul.logout {
-        position:absolute;
+  
+    ul {
+        list-style: none;
+        margin: 5px 0;
+        padding: 10px;
+                  
+        li {
+            width:130px;
+            height: auto;
+            margin-bottom: 10px;
+            white-space: nowrap;
+            cursor: pointer;
+  
+            a {
+                position:relative;
+                display:table;
+                border-radius: 10px;
+                border-collapse:collapse;
+                border-spacing:0;
+                color:#999;
+                font-family: arial;
+                font-size: 14px;
+                text-decoration:none;
+                -webkit-transition:all .1s linear;
+                transition:all .1s linear;
+                
+                &:hover {
+                    color:#fff;
+                    background-color:#5fa2db;
+                }
+            }
+  
+            span {
+                width:100%;
+                padding-left: 10px;
+                position:relative;
+                display:table-cell;
+                vertical-align:middle;
+                font-family: 'Titillium Web', sans-serif;
+            }
+                
+        }
+    }
+  
+    ul.logout {
+        position:fixed;
         left:0;
         bottom:0;
+        margin-left: 10px;
     }
-
-}
-
-a:hover,a:focus {
-    text-decoration:none;
-}
-
-nav {
-    -webkit-user-select:none;
-    -moz-user-select:none;
-    -ms-user-select:none;
-    -o-user-select:none;
-    user-select:none;
-
-    ul, li {
-        outline:0;
-        margin:0;
-        padding:0;
+    
+    button {
+        display: none;
     }
-}
+  
+      
+  }
+  
+@media screen and (max-width: 768px) {
+    .menu {
+        width: 180px;
+        height: 100%;
+        padding: 20px 70px;
+        position: fixed;
+        padding: 0;
+        top: 0;
+        left: 0;
+        transform: translateX(-100%);
+        transition: 0.5s;
+    }
+    
+    .menu-activo {
+        transform: translateX(0%);
+    }
+    
+    .menu button {
+        display: block;
+        position: absolute;
+        text-align: right;
+        background-color: #212121;
+        border-color: #212121;
+        color: #999;
+        cursor: pointer;
+        transform: translateX(160px);
 
+        &:hover{ 
+          color:#fff;
+          background-color:#5fa2db;
+          border-color: #5fa2db;
+        }
+    }
+    
+    .menu-content{
+        position: static;
+    }
+    .content {
+        padding: 20px 40px;
+    }
+  }
