--- a/public/sass/ver.scss
+++ b/public/sass/ver.scss
@@ -2,32 +2,37 @@
 @import url(../css/global.css);
 
 .content {
+    width: 100%;
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(5,1fr);
     grid-area: repeat(4 ,1fr);
     grid-template-areas: 
         'img info info info info'
-        'img info info info info'
+        'prestamos prestamos prestamos prestamos prestamos'
         'prestamos prestamos prestamos prestamos prestamos'
         'prestamos prestamos prestamos prestamos prestamos'
     ;
 
     .img {
         grid-area: img;
-        border: solid 1px;
+        border-style: solid;
+        border-width: 1px;
         border-color:#000;
         
         img {
-            width: 100%;
-            height: auto;
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
         }
     }
 
     .info {
         grid-area: info;
-        padding: 10px;
-        border: solid 1px;
+        border-style: solid;
+        border-width: 1px;
         border-color:#000;
+        padding: 10px;
 
         p {
             display: block;
@@ -40,7 +45,24 @@
 
     .prestamos {
         grid-area: prestamos;
-        border: solid 1px;
+        border-style: solid;
+        border-width: 1px;
         border-color:#000;
+    }
+}
+
+.btn-back {
+    background-color: #0d4755;
+    border-style:solid;
+    border-width: 1px;
+    border-color: #000;
+    color: #fff;
+    padding: 10px;
+    max-width: 100px;
+    max-height: auto;
+    cursor: pointer;
+
+    &:hover {
+        background-color: #3e8692;
     }
 }
