--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -104,6 +104,6 @@
     position: static; }
 
   .content {
-    padding: 20px 40px; } }
+    padding: 10px; } }
 
 /*# sourceMappingURL=nav.css.map */
