--- a/public/css/sign_up.css
+++ b/public/css/sign_up.css
@@ -4,28 +4,34 @@
   position: fixed;
   left: 50%;
   transform: translate(calc(-50% + 80px), 20%); }
-  #msform fieldset {
-    background-color: #fff;
-    border: 0 none;
-    border-radius: 3px;
-    box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
-    padding: 20px 30px;
-    box-sizing: border-box;
-    width: 80%;
+  #msform .form-content {
     margin: 0 10%;
-    position: relative; }
-    #msform fieldset:not(:first-of-type) {
-      display: none; }
-  #msform input {
-    padding: 15px;
-    border: 1px solid #ccc;
+    width: 80%;
+    padding: 20px;
+    background-color: #fff;
+    border-style: none;
     border-radius: 10px;
-    margin-bottom: 10px;
-    width: 100%;
+    box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
     box-sizing: border-box;
-    font-family: montserrat;
-    color: #2C3E50;
-    font-size: 13px; }
+    position: relative; }
+    #msform .form-content fieldset {
+      border-style: none;
+      margin: 0 10%; }
+      #msform .form-content fieldset:not(:first-of-type) {
+        display: none; }
+    #msform .form-content input {
+      padding: 15px;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      margin-bottom: 10px;
+      width: 100%;
+      box-sizing: border-box;
+      color: #2C3E50;
+      font-size: 13px; }
+    #msform .form-content #curp {
+      text-transform: uppercase; }
+    #msform .form-content #email {
+      text-transform: lowercase; }
 
 .fs-title {
   text-transform: uppercase;
@@ -99,21 +105,92 @@
   -moz-appearance: none;
   appearance: none; }
 
-#curp {
-  text-transform: uppercase; }
+.align-right {
+  display: inline-flex;
+  width: 50%;
+  justify-content: end; }
+  .align-right .btn-next {
+    display: inline-block;
+    width: 30px;
+    height: auto;
+    background-color: #fff;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #fff;
+    border-radius: 55%;
+    margin-top: 5px;
+    font-size: 30px;
+    cursor: pointer;
+    text-align: right;
+    margin-right: 10px; }
+    .align-right .btn-next i:hover {
+      color: #333; }
 
-.btn-signup {
-  padding: 12px 40px;
-  width: 100%;
-  margin-top: 5px;
-  border: solid #000 1px;
-  border-radius: 10px;
+.align-left {
   display: inline-block;
-  font-size: 16px;
+  width: 40%; }
+  .align-left .btn-previous {
+    display: none;
+    width: 30px;
+    height: auto;
+    background-color: #fff;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #fff;
+    border-radius: 55%;
+    margin-top: 5px;
+    font-size: 30px;
+    margin-right: 5px;
+    margin-left: 30px;
+    cursor: pointer; }
+    .align-left .btn-previous i:hover {
+      color: #333; }
+
+.btn-back {
+  padding: 2px 10px;
+  background-color: #3e8692;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #000;
+  border-radius: 10px;
+  color: #fff;
+  margin-bottom: 10px;
   cursor: pointer; }
+  .btn-back:hover {
+    background-color: #387984; }
+
+.btn-submit {
+  display: none;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #3e8692;
+  border-radius: 10px;
+  color: #fff;
+  margin-left: 50%;
+  font-weight: bold; }
+  .btn-submit:hover {
+    background-color: #0d4755; }
 
 @media screen and (max-width: 768px) {
   #msform {
     transform: translate(-50%, 10%); } }
+span[data-descr] {
+  position: relative;
+  text-decoration: underline;
+  color: #000;
+  cursor: help; }
+  span[data-descr]:hover::after, span[data-descr]:focus::after {
+    content: attr(data-descr);
+    position: absolute;
+    left: 0;
+    top: 24px;
+    min-width: 200px;
+    border: 1px #aaaaaa solid;
+    border-radius: 10px;
+    background-color: #e5e5e5;
+    padding: 12px;
+    color: #000000;
+    font-size: 14px;
+    z-index: 1; }
 
 /*# sourceMappingURL=sign_up.css.map */
