--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,9 +1,10 @@
 @import url(../css/global.css);
 body {
   height: 860px;
-  background-image: url("../img/background.webp");
+  background-image: url("../img/background.jpg");
   background-size: cover;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  background-position: center center; }
 
 .btn-login {
   display: block;
@@ -51,7 +52,7 @@ body {
 
 .login-content {
   width: 320px;
-  height: 430px;
+  height: 445px;
   background-color: #fff;
   border-style: solid;
   border-width: 1px;
