--- a/public/css/ver.css
+++ b/public/css/ver.css
@@ -13,6 +13,8 @@
     border-width: 1px;
     border-color: #000; }
     .content .img img {
+      display: block;
+      margin: 0 auto;
       width: 200px;
       height: 200px;
       border-radius: 50%; }
@@ -33,7 +35,7 @@
     border-color: #000; }
 
 .btn-back {
-  background-color: #0d4755;
+  background-color: #c18700;
   border-style: solid;
   border-width: 1px;
   border-color: #000;
@@ -44,5 +46,20 @@
   cursor: pointer; }
   .btn-back:hover {
     background-color: #3e8692; }
+
+table {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  border-width: 1px;
+  border-spacing: 0px;
+  border-style: solid;
+  border-collapse: separate;
+  background-color: #fff; }
+  table tr, table td {
+    border-width: 1px;
+    padding: 5px;
+    border-style: solid;
+    border-color: black;
+    background-color: fff; }
 
 /*# sourceMappingURL=ver.css.map */
