--- a/public/sass/login.scss
+++ b/public/sass/login.scss
@@ -4,9 +4,10 @@
 
 body {
     height: 860px;
-    background-image: url("../img/background.webp");
+    background-image: url("../img/background.jpg");
     background-size: cover;
     background-repeat:no-repeat;
+    background-position: center center;
 }
 
 .btn-login {
@@ -65,7 +66,7 @@ body {
 
 .login-content {
     width: 320px;
-    height: 430px;
+    height: 445px;
     background-color: #fff;
     border-style: solid;
     border-width: 1px;
