--- a/public/sass/ver.scss
+++ b/public/sass/ver.scss
@@ -21,6 +21,8 @@
         border-color:#000;
         
         img {
+            display: block;
+            margin: 0 auto;
             width: 200px;
             height: 200px;
             border-radius: 50%;
@@ -52,7 +54,7 @@
 }
 
 .btn-back {
-    background-color: #0d4755;
+    background-color: #c18700;
     border-style:solid;
     border-width: 1px;
     border-color: #000;
@@ -64,5 +66,24 @@
 
     &:hover {
         background-color: #3e8692;
+    }
+}
+
+table {
+    margin-top: 15px;
+    margin-bottom: 15px;
+	border-width: 1px;
+	border-spacing: 0px;
+	border-style: solid;
+	border-collapse: separate;
+    background-color: #fff;
+
+    tr, td {
+        border-width: 1px;
+        padding: 5px;
+        border-style: solid;
+        border-color: black;
+        background-color: fff;
+
     }
 }
