--- a/public/css/perfil.css
+++ b/public/css/perfil.css
@@ -9,11 +9,6 @@
   .content .header {
     grid-area: header;
     max-height: 300px; }
-    .content .header p {
-      text-align: center;
-      font-size: 20px;
-      font-weight: bold;
-      margin-top: -55px; }
     .content .header .content-img {
       width: 100%;
       height: 100%;
@@ -34,14 +29,21 @@
         border-style: solid;
         border-width: 1px;
         border-color: #000; }
+    .content .header p {
+      text-align: center;
+      font-size: 20px;
+      font-weight: bold;
+      margin-top: -50px; }
   .content .body {
     grid-area: body;
     padding: 10px;
     border-style: solid;
     border-width: 1px;
-    border-color: #000; }
+    border-color: #000;
+    border-radius: 10px;
+    margin-top: 10px; }
     .content .body .lista-datos {
-      width: 50%;
+      width: 100%;
       list-style: none; }
       .content .body .lista-datos span {
         font-weight: bold; }
@@ -51,10 +53,5 @@
         margin-right: 1rem;
         font-size: 1.2rem;
         vertical-align: middle; }
-  .content .footer {
-    grid-area: footer;
-    border-style: solid;
-    border-width: 1px;
-    border-color: #000; }
 
 /*# sourceMappingURL=perfil.css.map */
