--- a/public/sass/nav.scss
+++ b/public/sass/nav.scss
@@ -16,6 +16,7 @@
 
 .content {
     padding: 20px;
+    
 } 
 
 .menu {
@@ -25,6 +26,7 @@
     z-index: 999;
     
     .menu-content {
+        height: 93.1vh;
         position: sticky;
         top: 0;
     }
@@ -62,7 +64,6 @@
                 border-collapse:collapse;
                 border-spacing:0;
                 color:#999;
-                font-family: arial;
                 font-size: 14px;
                 text-decoration:none;
                 -webkit-transition:all .1s linear;
@@ -80,7 +81,6 @@
                 position:relative;
                 display:table-cell;
                 vertical-align:middle;
-                font-family: 'Titillium Web', sans-serif;
             }
                 
         }
