--- a/public/sass/perfil.scss
+++ b/public/sass/perfil.scss
@@ -18,13 +18,6 @@
         grid-area: header;
         max-height: 300px;
         
-        p {
-            text-align: center;
-            font-size: 20px;
-            font-weight: bold;
-            margin-top: -55px;
-        }
-
         .content-img {
             width: 100%;
             height: 100%;
@@ -48,18 +41,26 @@
                 border-color:#000;
             }
         }
+
+        p {
+            text-align: center;
+            font-size: 20px;
+            font-weight: bold;
+            margin-top: -50px;
+        }
     }
 
     .body {
         grid-area: body;
         padding: 10px;
-    
         border-style: solid;
         border-width: 1px;
         border-color:#000;
+        border-radius: 10px;
+        margin-top: 10px;
 
         .lista-datos {
-            width: 50%;
+            width: 100%;
             list-style: none;
 
             span {
@@ -76,12 +77,5 @@
                 vertical-align: middle;
             }
         }
-    }
-
-    .footer {
-        grid-area: footer;
-        border-style: solid;
-        border-width: 1px;
-        border-color:#000;
     }
 }
