--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,5 +1,6 @@
 @import url(https://site-assets.fontawesome.com/releases/v6.1.1/css/all.css);
 @import url(../css/nav.css);
+@import url(../css/modal.css);
 * {
   padding: 0;
   margin: 0; }
