--- a/public/css/perfil.css
+++ b/public/css/perfil.css
@@ -4,8 +4,8 @@
   height: 100%;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-area: repeat(4, 1fr);
-  grid-template-areas: "header header header header header" "body body body body body" "body body body body body" "footer footer footer footer footer"; }
+  grid-area: repeat(5, 1fr);
+  grid-template-areas: "header header header header header" "body body body body body" "body body body body body" "footer footer footer footer footer" "footer footer footer footer footer"; }
   .content .header {
     grid-area: header;
     max-height: 300px; }
@@ -33,7 +33,7 @@
       text-align: center;
       font-size: 20px;
       font-weight: bold;
-      margin-top: -50px; }
+      margin-top: -65px; }
   .content .body {
     grid-area: body;
     padding: 10px;
@@ -53,5 +53,96 @@
         margin-right: 1rem;
         font-size: 1.2rem;
         vertical-align: middle; }
+  .content .footer {
+    grid-area: footer;
+    padding: 15px;
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #000; }
+    .content .footer a {
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
+      padding: 10px;
+      cursor: pointer; }
+      .content .footer a:hover {
+        background-color: #c18700b0;
+        color: #000; }
+    .content .footer .activo {
+      border-color: #000 !important;
+      border-top-style: solid;
+      border-top-width: 1px;
+      border-right-style: solid;
+      border-right-width: 1px;
+      border-left-style: solid;
+      border-left-width: 1px;
+      background-color: #c18700b0 !important; }
+    .content .footer .active {
+      display: block !important; }
+    .content .footer #edit-content {
+      display: none; }
+      .content .footer #edit-content input {
+        width: 15%;
+        min-width: 220px;
+        padding: 15px;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+        margin-bottom: 10px;
+        box-sizing: border-box;
+        color: #2C3E50;
+        font-size: 13px; }
+    .content .footer #configuracion-content {
+      display: none; }
+    .content .footer #notifications-content {
+      display: none; }
+    .content .footer label {
+      cursor: pointer;
+      text-indent: -9999px;
+      width: 50px;
+      height: 30px;
+      background: grey;
+      display: block;
+      border-radius: 100px;
+      position: relative; }
+      .content .footer label:after {
+        content: '';
+        position: absolute;
+        top: 5px;
+        left: 5px;
+        width: 20px;
+        height: 20px;
+        background: #fff;
+        border-radius: 90px;
+        transition: 0.3s; }
+    .content .footer .config .option {
+      display: block;
+      margin-top: 25px; }
+      .content .footer .config .option p {
+        display: inline-block;
+        width: 10%;
+        margin-right: 10px; }
+      .content .footer .config .option label {
+        display: inline-block; }
+    .content .footer input[type=checkbox] {
+      height: 0;
+      width: 0;
+      visibility: hidden; }
+    .content .footer input:checked + label {
+      background-color: #3e8692; }
+    .content .footer input:checked + label:after {
+      left: calc(100% - 5px);
+      transform: translateX(-100%); }
+    .content .footer label:active:after {
+      width: 40px; }
+  .content .content-button {
+    display: flex;
+    justify-content: right; }
+    .content .content-button button {
+      border-radius: 10px;
+      border-style: none;
+      color: #fff;
+      padding: 15px; }
+      .content .content-button button:hover {
+        background-color: #007a28; }
 
 /*# sourceMappingURL=perfil.css.map */
