--- a/public/sass/perfil.scss
+++ b/public/sass/perfil.scss
@@ -6,11 +6,12 @@
     height: 100%;
     display: grid;
     grid-template-columns: repeat(5,1fr);
-    grid-area: repeat(4 ,1fr);
+    grid-area: repeat(5 ,1fr);
     grid-template-areas: 
         'header header header header header'
         'body body body body body'
         'body body body body body'
+        'footer footer footer footer footer'
         'footer footer footer footer footer'
     ;
 
@@ -46,7 +47,7 @@
             text-align: center;
             font-size: 20px;
             font-weight: bold;
-            margin-top: -50px;
+            margin-top: -65px;
         }
     }
 
@@ -75,6 +76,140 @@
                 margin-right: 1rem;
                 font-size: 1.2rem;
                 vertical-align: middle;
+            }
+        }
+    }
+
+    .footer {
+        grid-area: footer;
+        padding: 15px;
+        border-radius: 10px;
+        border-style: solid;
+        border-width: 1px;
+        border-color:#000;
+
+        a {
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            padding: 10px;
+            cursor: pointer;
+            &:hover {
+                background-color: #c18700b0;
+                color: #000;
+            }
+        }
+
+        .activo {
+            border-color: #000!important;
+            border-top-style: solid;
+            border-top-width: 1px;
+            border-right-style: solid;
+            border-right-width: 1px;
+            border-left-style: solid;
+            border-left-width: 1px;
+            background-color: #c18700b0!important;
+        }
+
+        .active {
+            display: block!important;
+        }
+
+        #edit-content {
+            display: none;
+
+            input { 
+                width: 15%;
+                min-width: 220px;
+                padding: 15px;
+                border: 1px solid #ccc;
+                border-radius: 10px;
+                margin-bottom: 10px;
+                box-sizing: border-box;
+                color: #2C3E50;
+                font-size: 13px;
+            }
+        }
+
+        #configuracion-content {
+            display: none;
+        }
+
+        #notifications-content {
+            display: none;
+        }
+
+        label {
+            cursor: pointer;
+            text-indent: -9999px;
+            width: 50px;
+            height: 30px;
+            background: grey;
+            display: block;
+            border-radius: 100px;
+            position: relative;
+
+            &:after {
+                content: '';
+                position: absolute;
+                top: 5px;
+                left: 5px;
+                width: 20px;
+                height: 20px;
+                background: #fff;
+                border-radius: 90px;
+                transition: 0.3s;
+            }
+        }
+
+        .config  {
+            .option {
+                display: block;
+                margin-top: 25px;
+
+                p {
+                    display: inline-block;
+                    width: 10%;
+                    margin-right:10px;
+
+                }
+                label {
+                    display: inline-block;
+                }
+            }
+        }
+
+        input[type=checkbox]{
+            height: 0;
+            width: 0;
+            visibility: hidden;
+        }
+
+        input:checked + label {
+            background-color: #3e8692;
+        }
+
+        input:checked + label:after {
+            left: calc(100% - 5px);
+            transform: translateX(-100%);
+        }
+
+         label:active:after {
+            width: 40px;
+        }    
+    }
+
+    .content-button {
+        display: flex;
+        justify-content: right;
+
+        button {
+            border-radius: 10px;
+            border-style: none;
+            color: #fff;
+            padding: 15px;
+
+            &:hover {
+                background-color: #007a28;
             }
         }
     }
