--- a/public/css/cliente.css
+++ b/public/css/cliente.css
@@ -100,4 +100,19 @@
 .modal {
   display: block !important; }
 
+.activo {
+  display: block !important; }
+
+.inactivo {
+  display: none !important; }
+
+#Importe, #Destinatario, #Motivo, #nuevo {
+  display: none;
+  padding: 10px; }
+  #Importe h3, #Destinatario h3, #Motivo h3, #nuevo h3 {
+    padding-bottom: 10px; }
+
+input[type=radio] {
+  display: none; }
+
 /*# sourceMappingURL=cliente.css.map */
